WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136168
Google Canvas2D maps are too slow and uncontrollable with Safari with full screen mode
https://bugs.webkit.org/show_bug.cgi?id=136168
Summary
Google Canvas2D maps are too slow and uncontrollable with Safari with full sc...
Dean Jackson
Reported
2014-08-22 13:37:35 PDT
Google Canvas2D maps are too slow and uncontrollable with Safari with full screen mode
Attachments
patch
(2.32 KB, patch)
2014-08-22 13:48 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-08-22 13:47:17 PDT
<
rdar://problem/16896423
>
Dean Jackson
Comment 2
2014-08-22 13:48:17 PDT
Created
attachment 236995
[details]
patch
Dean Jackson
Comment 3
2014-08-22 13:55:40 PDT
Committed
r172871
: <
http://trac.webkit.org/changeset/172871
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug