Google Canvas2D maps are too slow and uncontrollable with Safari with full screen mode https://bugs.webkit.org/show_bug.cgi?id=136168

Reviewed by Tim Horton.

When Google maps are using their 2D "lite" fallback and you're drawing in a huge
window such as fullscreen 4K, we would drop back to unaccelerated mode, thinking
that we'd exceeded the maximum IOSurface size.

Remove the hardcoded limit on IOSurface sizes, and instead ask the system
what it believe the maximum to be. This was significantly higher than our
limit on the systems I tested.

* platform/graphics/cg/ImageBufferCG.cpp:
(WebCore::ImageBuffer::ImageBuffer): Include our IOSurface wrapper, which
has a query for maximum size, and use that instead.

Canonical link: https://commits.webkit.org/154003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172871 268f45cc-cd09-0410-ab3c-d52691b4dbfc